# RayTracerGUI

./: CMakeLists.txt  README.md  lanceur-de-rayons.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  wishlist
qtCustomType/: qsceneobject.cpp  qsceneobject.h
src/environment/: Scene.cpp
src/objects/: Cube.cpp  Cube.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
src/utils/: Material.cpp  Material.h
widgets/: MaterialPropertiesWidget.cpp  MaterialPropertiesWidget.h  camerapropertieswidget.cpp  camerapropertieswidget.h  floatedit.cpp  floatedit.h  lightpropertieswidget.cpp  lightpropertieswidget.h  propertieseditorwidget.cpp  propertieseditorwidget.h  vectorentrywidget.cpp  vectorentrywidget.h  widgets.h
widgets/objects/: ObjectPropertiesWidget.cpp  ObjectPropertiesWidget.h  cubepropertieswidget.cpp  cubepropertieswidget.h  planepropertieswidget.cpp  planepropertieswidget.h  quadpropertieswidget.cpp  quadpropertieswidget.h  spherepropertieswidget.cpp  spherepropertieswidget.h
